# clean-architecture-todo-app

./: .gitignore  README.md
app/: pyproject.toml  pytest.ini
app/src/app/application/auth/dtos/: register_user.py
app/src/app/application/auth/interfaces/: password_hasher.py
app/src/app/application/auth/use_cases/: register_user.py
app/src/app/application/shared/: uow.py
app/src/app/application/user/: repository.py
app/src/app/domain/shared/: errors.py  specification.py
app/src/app/domain/user/: entity.py
app/src/app/domain/user/specifications/: password.py
app/src/app/domain/user/value_objects/email/: errors.py  value_object.py
app/src/app/domain/user/value_objects/name/: errors.py  value_object.py
app/tests/unit/domain/user/: test_user.py
app/tests/unit/domain/user/specifications/: test_password.py
app/tests/unit/domain/user/value_objects/: test_email.py  test_name.py
